tools/tests/errors/deep_stringify.ki
var a = [1]
var i = 0
while i < 50000:
    a = [a]
    i = i + 1
String(a)
